--- a/index.html
+++ b/index.html
@@ -125,5 +125,7 @@ if (token) {
 document.getElementById("profileBtn").addEventListener("click", () => {
   window.location.href = "dashboard.html";
 });
+  </script>
 </body>
 </html>
+
