--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </div>
 
   <div class="header-actions">
-    <button class="icon-btn">
+    <button class="icon-btn" id="profileBtn">
       <span class="material-icons">person</span>
     </button>
     <button class="icon-btn">
@@ -128,4 +128,5 @@ document.getElementById("profileBtn").addEventListener("click", () => {
   </script>
 </body>
 </html>
+
 
