--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>
 
     <div class="nav-item">
-      <span class="material-icons">person</span>
+      <span class="material-icons" id="profileBtn">person</span>
       <span>Account</span>
     </div>
 
@@ -165,3 +165,4 @@ loadSuggested();
 </script>
 </body>
 </html>
+
