--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -631,7 +631,7 @@ if (product.image && product.image.url) {
   formData.append("name", document.getElementById("name").value);
   formData.append("description", document.getElementById("description").value);
   formData.append("category", document.getElementById("category").value);
-  formData.append("subCategory",document.getElementById("subCategory").value);
+  formData.append("subCategory",document.getElementById("subCategory").value.toLowerCase());
   formData.append("price", document.getElementById("price").value);
   formData.append("discount", document.getElementById("discount").value);
   formData.append("stock", document.getElementById("stock").value);
