--- a/index.html
+++ b/index.html
@@ -86,6 +86,33 @@
   <div class="product-row" id="suggestedRow"></div>
 </section>
 
+
+
+
+  <!-- Mobile Bottom Navigation -->
+<nav class="mobile-bottom-nav">
+  <a href="/" class="active">
+    <span class="material-icons">home</span>
+    <small>Home</small>
+  </a>
+
+  <a href="/categories">
+    <span class="material-icons">category</span>
+    <small>Categories</small>
+  </a>
+
+  <a href="/account">
+    <span class="material-icons">person</span>
+    <small>Account</small>
+  </a>
+
+  <a href="/cart">
+    <span class="material-icons">shopping_cart</span>
+    <small>Cart</small>
+  </a>
+</nav>
+
+
 <script src="api.js"></script>
 <script>
   
@@ -200,5 +227,6 @@ function showSkeletons(containerId, count) {
 </script>
 </body>
 </html>
+
 
 
