--- a/index.html
+++ b/index.html
@@ -91,12 +91,40 @@
 
   <!-- Mobile Bottom Navigation -->
 <nav class="mobile-bottom-nav">
+
+  <div class="bottom-nav-item">
   <a href="/" class="active">
     <span class="material-icons">home</span>
-    <small>Home</small>
+    <!-- <small>Home</small> -->
+    <span class="label">Home</span>
   </a>
+  </div>
 
-  <a href="/categories">
+  <div class="bottom-nav-item">
+  <a href="/" >
+    <span class="material-icons">category</span>
+    <!-- <small>Home</small> -->
+    <span class="label">Categories</span>
+  </a>
+  </div>
+
+  <div class="bottom-nav-item">
+  <a href="/">
+    <span class="material-icons">person</span>
+    <!-- <small>Home</small> -->
+    <span class="label">Account</span>
+  </a>
+  </div>
+
+  <div class="bottom-nav-item">
+  <a href="/" class="active">
+    <span class="material-icons">shopping_cart</span>
+    <!-- <small>Home</small> -->
+    <span class="label">Cart</span>
+  </a>
+  </div>
+
+  <!-- <a href="/categories">
     <span class="material-icons">category</span>
     <small>Categories</small>
   </a>
@@ -109,7 +137,7 @@
   <a href="/cart">
     <span class="material-icons">shopping_cart</span>
     <small>Cart</small>
-  </a>
+  </a> -->
 </nav>
 
 
@@ -227,6 +255,7 @@ function showSkeletons(containerId, count) {
 </script>
 </body>
 </html>
+
 
 
 
