--- a/index.html
+++ b/index.html
@@ -89,55 +89,24 @@
 
 
 
-  <!-- Mobile Bottom Navigation -->
-<nav class="mobile-bottom-nav">
-
-  <div class="bottom-nav-item">
-  <a href="/" class="active">
-    <span class="material-icons">home</span>
-    <!-- <small>Home</small> -->
-    <span class="label">Home</span>
+  
+<nav class="nav">
+  <a href="#" class="nav__link">
+    <i class="material-icons nav__icon">home</i>
+    <span class="nav__text">Home</span>
   </a>
-  </div>
-
-  <div class="bottom-nav-item">
-  <a href="/" >
-    <span class="material-icons">category</span>
-    <!-- <small>Home</small> -->
-    <span class="label">Categories</span>
+  <a href="#" class="nav__link nav__link--active">
+    <i class="material-icons nav__icon">category</i>
+    <span class="nav__text">Categories</span>
   </a>
-  </div>
-
-  <div class="bottom-nav-item">
-  <a href="/">
-    <span class="material-icons">person</span>
-    <!-- <small>Home</small> -->
-    <span class="label">Account</span>
+  <a href="#" class="nav__link">
+    <i class="material-icons nav__icon">person</i>
+    <span class="nav__text">Account</span>
   </a>
-  </div>
-
-  <div class="bottom-nav-item">
-  <a href="/" class="active">
-    <span class="material-icons">shopping_cart</span>
-    <!-- <small>Home</small> -->
-    <span class="label">Cart</span>
+  <a href="#" class="nav__link">
+    <i class="material-icons nav__icon">shopping_cart</i>
+    <span class="nav__text">Cart</span>
   </a>
-  </div>
-
-  <!-- <a href="/categories">
-    <span class="material-icons">category</span>
-    <small>Categories</small>
-  </a>
-
-  <a href="/account">
-    <span class="material-icons">person</span>
-    <small>Account</small>
-  </a>
-
-  <a href="/cart">
-    <span class="material-icons">shopping_cart</span>
-    <small>Cart</small>
-  </a> -->
 </nav>
 
 
@@ -255,6 +224,7 @@ function showSkeletons(containerId, count) {
 </script>
 </body>
 </html>
+
 
 
 
