--- a/index.html
+++ b/index.html
@@ -92,20 +92,24 @@
   
 <nav class="nav">
   <a href="#" class="nav__link">
-    <i class="material-icons nav__icon">home</i>
-    <span class="nav__text">Home</span>
+    <i class="material-icons nav__icon">dashboard</i>
+    <span class="nav__text">Dashboard</span>
   </a>
   <a href="#" class="nav__link nav__link--active">
-    <i class="material-icons nav__icon">category</i>
-    <span class="nav__text">Categories</span>
-  </a>
-  <a href="#" class="nav__link">
     <i class="material-icons nav__icon">person</i>
-    <span class="nav__text">Account</span>
+    <span class="nav__text">Profile</span>
   </a>
   <a href="#" class="nav__link">
-    <i class="material-icons nav__icon">shopping_cart</i>
-    <span class="nav__text">Cart</span>
+    <i class="material-icons nav__icon">devices</i>
+    <span class="nav__text">Devices</span>
+  </a>
+  <a href="#" class="nav__link">
+    <i class="material-icons nav__icon">lock</i>
+    <span class="nav__text">Privacy</span>
+  </a>
+  <a href="#" class="nav__link">
+    <i class="material-icons nav__icon">settings</i>
+    <span class="nav__text">Settings</span>
   </a>
 </nav>
 
@@ -224,6 +228,7 @@ function showSkeletons(containerId, count) {
 </script>
 </body>
 </html>
+
 
 
 
