--- a/index.html
+++ b/index.html
@@ -90,28 +90,29 @@
 
 
   
-<nav class="nav">
-  <a href="#" class="nav__link">
-    <i class="material-icons nav__icon">dashboard</i>
-    <span class="nav__text">Dashboard</span>
+<!-- Mobile Bottom Navigation -->
+<nav class="mobile-bottom-nav">
+  <a href="/" class="active">
+    <span class="material-icons">home</span>
+    <small>Home</small>
   </a>
-  <a href="#" class="nav__link nav__link--active">
-    <i class="material-icons nav__icon">person</i>
-    <span class="nav__text">Profile</span>
+
+  <a href="/categories">
+    <span class="material-icons">category</span>
+    <small>Categories</small>
   </a>
-  <a href="#" class="nav__link">
-    <i class="material-icons nav__icon">devices</i>
-    <span class="nav__text">Devices</span>
+
+  <a href="/account">
+    <span class="material-icons">person</span>
+    <small>Account</small>
   </a>
-  <a href="#" class="nav__link">
-    <i class="material-icons nav__icon">lock</i>
-    <span class="nav__text">Privacy</span>
-  </a>
-  <a href="#" class="nav__link">
-    <i class="material-icons nav__icon">settings</i>
-    <span class="nav__text">Settings</span>
+
+  <a href="/cart">
+    <span class="material-icons">shopping_cart</span>
+    <small>Cart</small>
   </a>
 </nav>
+
 
 <script src="api.js"></script>
 <script>
@@ -227,6 +228,7 @@ function showSkeletons(containerId, count) {
 </script>
 </body>
 </html>
+
 
 
 
